--- a/EugenSystemsGame.vcxproj
+++ b/EugenSystemsGame.vcxproj
@@ -147,25 +147,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Capacity.cpp" />
-    <ClCompile Include="ChargeCapacity.cpp" />
-    <ClCompile Include="Game.cpp" />
-    <ClCompile Include="Orc.cpp" />
-    <ClCompile Include="Entity.cpp" />
-    <ClCompile Include="EugenSystemsGame.cpp" />
-    <ClCompile Include="Chevalier.cpp" />
-    <ClCompile Include="StunCapacity.cpp" />
-    <ClCompile Include="Weapon.cpp" />
+    <ClCompile Include="Classes\Capacity.cpp" />
+    <ClCompile Include="Classes\ChargeCapacity.cpp" />
+    <ClCompile Include="Classes\Chevalier.cpp" />
+    <ClCompile Include="Classes\Entity.cpp" />
+    <ClCompile Include="Classes\Game.cpp" />
+    <ClCompile Include="Classes\Orc.cpp" />
+    <ClCompile Include="Classes\StunCapacity.cpp" />
+    <ClCompile Include="Classes\Weapon.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Capacity.h" />
-    <ClInclude Include="ChargeCapacity.h" />
-    <ClInclude Include="Game.h" />
-    <ClInclude Include="Orc.h" />
-    <ClInclude Include="Entity.h" />
-    <ClInclude Include="Chevalier.h" />
-    <ClInclude Include="StunCapacity.h" />
-    <ClInclude Include="Weapon.h" />
+    <ClInclude Include="Classes\Capacity.h" />
+    <ClInclude Include="Classes\ChargeCapacity.h" />
+    <ClInclude Include="Classes\Chevalier.h" />
+    <ClInclude Include="Classes\Entity.h" />
+    <ClInclude Include="Classes\Game.h" />
+    <ClInclude Include="Classes\Orc.h" />
+    <ClInclude Include="Classes\StunCapacity.h" />
+    <ClInclude Include="Classes\Weapon.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Data\HomeRules.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
